back up to 500 instead of 1000 trees for cloud

--- a/materials/exercises/05-tune.Rmd
+++ b/materials/exercises/05-tune.Rmd
@@ -39,7 +39,7 @@ How does it compare to the average ROC AUC across folds from `fit_resamples()`?
 
 ```{r}
 rf_spec <- 
-  rand_forest(trees = 1000) %>% 
+  rand_forest() %>% 
   set_engine("ranger") %>% 
   set_mode("classification")
 
