--- a/materials/rmed-solutions/01-model.Rmd
+++ b/materials/rmed-solutions/01-model.Rmd
@@ -82,7 +82,7 @@ nn_mod %>%
 ```{r}
 set.seed(100) # Important!
 
-alz_split  <- initial_split(alz, prop = .9)
+alz_split  <- initial_split(alz, strata = Class, prop = .9)
 alz_train  <- training(alz_split)
 alz_test   <- testing(alz_split)
 
@@ -109,7 +109,7 @@ Run the code below. What does it return?
 ```{r}
 set.seed(100)
 alz_folds <- 
-    vfold_cv(alz_train, v = 10, strata = Class, breaks = 4)
+    vfold_cv(alz_train, v = 10, strata = Class)
 alz_folds
 ```
 
